# Crystalline-Auto-Clicker

./: .gitignore  README.md  build-release.cmd  changelog.txt  fuck ass todo.txt
docs/: BUILDING.md  build-windows.cmd
src/: App.tsx  index.css  main.tsx
src-tauri/: .prettierignore  components.json  eslint.config.js  index.html  main-entry.ts  overlay.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
src-tauri/scripts/: build-desktop.ps1  tauri-with-bin.ps1
src-tauri/src/: App.tsx  index.css  main.tsx
src-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/src-tauri/capabilities/: default.json
src-tauri/src-tauri/icons/: icon.icns
src-tauri/src-tauri/src/: lib.rs  main.rs
src/auto-clicker/: runtime.ts  settings.ts
src/components/: always-on-top-button.tsx  app-error-boundary.tsx  click-duration-panel.tsx  click-limit-panel.tsx  click-position-overlay-app.tsx  click-position-panel.tsx  click-region-panel.tsx  close-to-tray-panel.tsx  compact-control-styles.ts  custom-color-picker.tsx  disabled-feature-dependency.ts  disabled-reason-overlay.tsx  double-click-panel.tsx  edge-stop-panel.tsx  jitter-panel.tsx  limits-panel.tsx  panel-frame.tsx  process-filter-panel.tsx  settings-panel.tsx  theme-panel.tsx  time-limit-panel.tsx  title-bar.tsx  window-opacity-panel.tsx
src/config/: runtime.ts  settings.ts  theme.ts  window-opacity.ts
src/input/: hotkeys.ts
src/lib/: auto-clicker.ts  browser.ts  click-position-overlay.ts  click-region.ts  color.ts  global-hotkey.ts  hotkey-capture.ts  main-window.ts  non-intrusive-click-positions.ts  process-filters.ts  settings-store.ts  (+2 more)
(+48 files in other folders)
